\name{DiffBindNews}
\title{DiffBind News}
\encoding{UTF-8}

\section{Version 1.5.2}{
   \itemize{
      \item{add features to dba.count to deal with filtering}
      \itemize{
         \item{Change parameter name: maxFilter -> filter}
         \item{Allow maxFilter to be a numerical vector to retrieve filtering rate}
         \item{Add parameter: filterFun to control filtering method}
         \item{Fix bug so SN gets recomputed after filtering}
         \item{Update documentation with example}
      }
   }
}

\section{Version 1.5.1}{
   \itemize{
      \item{Roll up bugfixes for 1.4.0}
   }
}

\section{Version 1.4.0}{
   \itemize{
      \item{Plotting}
      \itemize{
          \item{dba.plotMA}
          \itemize{
             \item{Smooth plots now default}
             \item{Added fold parameter in addition to th (threshold)}
          }
          \item{dba.plotHeatmap}
          \itemize{
             \item{Side colorbars added}
                \item{Add support for specifying sample mask to include any subset of samples in a contrast plot, including samples that were not in the original contrast}
           }
           \item{dba.plotVenn}
           \itemize{
                \item{Changed plotter from limma to T. Girke's overLapper}
                \item{Added support for 4-way Venns (also in dba/overlap)}
	  }
	  \item{dba.plotPCA}
	  \itemize{
               \item{Add support for specifying sample mask to include any subset of samples in a contrast plot, including samples that were not in the original contrast}  
            }
      }
      \item{Peaksets (dba and dba.peakset)}
      \itemize{
         \item{Peakset formats}
         \itemize{
            \item{narrowPeaks format supported}
            \item{Can override file format, score column, and score orientation defaults for supported peak callers}
         }
         \item{Consensus peaksets}
         \itemize{